--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "debug": "^3.1.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "http-errors": "^1.7.0",
     "morgan": "^1.9.0",
     "pug": "^2.0.3",
-    "winston": "^3.0.0",
+    "winston": "^3.1.0",
     "wpapi": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "eslint": "^5.4.0",
+    "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "prettier": "^1.14.2"
