--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.mjs",
   "scripts": {
-    "start": "NODE_ENV=development DEBUG=yicf-giving-api:* nodemon -r dotenv/config --experimental-modules --inspect index.mjs"
+    "start": "NODE_ENV=development DEBUG=yicf-giving-api:* nodemon -r dotenv/config --experimental-modules --nolazy --inspect index.mjs"
   },
   "engines": {
     "node": "10.x.x"
