--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "cuid": "^2.1.4",
     "debug": "^3.1.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "helmet": "^3.13.0",
     "http-errors": "^1.7.0",
     "morgan": "^1.9.0",
