--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
     "cuid": "^2.1.4",
     "debug": "^3.1.0",
     "dotenv": "^6.0.0",
+    "email-templates": "^5.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "helmet": "^3.13.0",
     "http-errors": "^1.7.0",
+    "mailgun-js": "^0.20.0",
     "morgan": "^1.9.0",
+    "path": "^0.12.7",
     "pug": "^2.0.3",
     "winston": "^3.1.0",
     "wpapi": "^1.1.2"
