--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-jwt": "^5.3.1",
     "helmet": "^3.13.0",
     "http-errors": "^1.7.1",
+    "jwks-rsa": "^1.3.0",
     "mailgun-js": "^0.20.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
